# template-app

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml  cmake-multi-platform.yml
app/project-app/: CMakeLists.txt
app/project-app/src/: main.cpp
libs/project-business/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: example.test.cpp  example2.test.cpp  pch.h
